GUI-1860 prevent worksheet label wrap in join modal

--- a/stylesheets/less/partials/modal.less
+++ b/stylesheets/less/partials/modal.less
@@ -765,6 +765,7 @@
                 padding-left: 5px;
                 margin-right: 5px;
                 color: @color-text-darkGray;
+                white-space: nowrap;
             }
         }
 
